Fixed some padding issues I saw on mobile

--- a/CSS/CSS/styles.css
+++ b/CSS/CSS/styles.css
@@ -532,7 +532,7 @@ social-list__link {
 }
 
 .portfolio-item-individual p {
-  max-width: 1000px;
+  max-width: 850px;
   margin-left: auto;
   margin-right: auto;
 }
